--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo" aline="left">
                 <i class="fa-solid fa-shop" aline="right"></i>
               
-                <h1>SOPPY</h1>
+                <h1>SHOPPY</h1>
             </div>
             <div class="search">
                 <input type="search" placeholder="type to search">
