--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a id="home" onclick="homes()">Home</a>
                     <a id="shop" onclick="shops()">Shops</a>
                     <a id="contact" onclick="contacts()">Login</a>
-                    <a id="blog" onclick="blogs()">profile</a>
+                    <a id="blog" onclick="blogs()">Profile</a>
                     <a id="about" onclick="abouts()"></a>
                     <a id="shop" onclick="shops()"     <i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
               
