--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     </div>
                     <div class="footerText">
                         <h2>About US</h2>
-                        <p>Adrress : Bazar chowk ,palakhed,chhindwara,MP. <br>
+                        <p>Adrress : Bazar Chowk, Palakhed, Chhindwara, MP. <br>
                            Customer</p>
                         <p>Service</p>
                         <p>Customer</p>
