--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
                     <div class="letterText">
                         <ul>
                             <li>
-                                <a id="" onclick="shops()">saree</a>
+                                <a id="" onclick="shops()">Saree</a>
                                 <a id="shop" onclick="shops()">t-shirt</a>
                                 <a id="blog" onclick="shops()">kurtas</a>
-                                <a id="about" onclick="shops()">lehengas</a>
+                                <a id="about" onclick="shops()">Lehengas</a>
                                 <a id="contact" onclick="shops()">men's suits</a>
                                 <a id="" onclick="shops()">saree</a>
                                 <a id="" onclick="shops()">saree</a>
