--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <div class="me">
                         <img src="lap.png" alt="">
                         <div class="aboutText">
-                            <h1>Who we are ?</h1>
+                            <h1>Who We Are ?</h1>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing Dolorum corrupti consequuntur sunt ipsam aperiam vel magni sequi eos sit amet consectetur adipisicing Dolorum corrupti consequuntur sunt ipsam aperiam vel magni sequi eos atque nam maxime dolorem fuga, rem eum iure quidem! Illo corporis, asperiores ipsum excepturi voluptates necessitatibus consectetur odit omnis hic praesentium autem, officiis dignissimos assumenda saepe.</p>
                         </div>
                     </div>
