--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="crd">
                     <img src="srt1.webp" alt="" onclick="show(this)">
                     <div class="crdText">
-                        <h2>Cutton Trending Shirt's</h2>
+                        <h2>Trending Cotton Shirt's</h2>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
