--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <h1>Connect with Us. Fill Form</h1>
                         <input type="text" placeholder="Enter Email"> <br>
                         <input type="password" placeholder="Enter your Password"> <br>
-                        <input type="text" placeholder="Enter your full Name"> <br>
+                        <input type="text" placeholder="Enter your Full Name"> <br>
                         <input type="text" placeholder="Enter your Address"> <br>
                         <input type="text" placeholder="Enter your pin Number"> <br>
                         <button id="bt">Submit </button>
