--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                            <div class="btn">
-                            <button onclick="  Buynow ()"> Buy now</button>
+                            <button onclick="  Buynow ()"> Buy Now</button>
                             <button onclick="addCart()">Add to Cart</button>
                             <button onclick="Goback()">Back</button>
                            </div>
